src/objects/FDService__Fonteva_Service_Module_Class__mdt.object
<CustomObject>
    <fields>
        <fullName>FDService__Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDService__Fonteva_Service_Module__c</fullName>
        <label>Fonteva Service Module</label>
        <referenceTo>FDService__Fonteva_Service_Module__mdt</referenceTo>
        <relationshipLabel>Fonteva Service Module Classes</relationshipLabel>
        <relationshipName>Fonteva_Service_Module_Classes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>FDService__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Fonteva Service Module Class</label>
    <pluralLabel>Fonteva Service Module Classes</pluralLabel>
</CustomObject>